# syzygy

./: .gitignore  BUILD.gn  run_exe.py  syzygy_swapimport.gyp
syzygy/: syzygy.gni  syzygy.gypi
syzygy/application/: BUILD.gn  application.gyp
syzygy/assm/: BUILD.gn  assm.gyp
syzygy/block_graph/: BUILD.gn  block_graph.gyp
syzygy/block_graph/analysis/: BUILD.gn  block_graph_analysis.gyp
syzygy/block_graph/orderers/: BUILD.gn  block_graph_orderers.gyp
syzygy/block_graph/transforms/: BUILD.gn  block_graph_transforms.gyp
syzygy/common/: BUILD.gn  common.gyp
syzygy/common/rpc/: rpc.gyp
syzygy/core/: BUILD.gn  core.gyp
syzygy/msf/: BUILD.gn  msf.gyp
syzygy/pdb/: BUILD.gn  pdb.gyp
syzygy/pe/: BUILD.gn  image_filter.cc  pe.gyp
syzygy/pe/orderers/: pe_orderers.gyp
syzygy/pe/transforms/: pe_transforms.gyp
syzygy/swapimport/: BUILD.gn  swapimport.gyp
syzygy/version/: BUILD.gn  version.gyp
