# Minimal file to satisfy swapimport

import("../syzygy.gni")

source_set("pe_lib") {
    sources = [
        "coff_decomposer.cc",
        "coff_decomposer.h",
        "coff_file.cc",
        "coff_file.h",
        "coff_file_writer.cc",
        "coff_file_writer.h",
        "coff_image_layout_builder.cc",
        "coff_image_layout_builder.h",
        "coff_relinker.cc",
        "coff_relinker.h",
        "coff_transform_policy.cc",
        "coff_transform_policy.h",
        "coff_utils.cc",
        "coff_utils.h",
        "cvinfo_ext.h",
        "dia_browser.cc",
        "dia_browser.h",
        "dia_util.cc",
        "dia_util.h",
        "dia_util_internal.h",
        "decomposer.cc",
        "decomposer.h",
        "find.cc",
        "find.h",
        "image_filter.cc",
        "image_filter.h",
        "image_layout.cc",
        "image_layout.h",
        "image_source_map.cc",
        "image_source_map.h",
        "hot_patching_decomposer.cc",
        "hot_patching_decomposer.h",
        "hot_patching_writer.cc",
        "hot_patching_writer.h",
        "metadata.cc",
        "metadata.h",
        "pdb_info.cc",
        "pdb_info.h",
        "pe_coff_file.h",
        "pe_coff_file_impl.h",
        "pe_coff_image_layout_builder.cc",
        "pe_coff_image_layout_builder.h",
        "pe_coff_relinker.cc",
        "pe_coff_relinker.h",
        "pe_data.h",
        "pe_file.h",
        "pe_file_impl.h",
        "pe_file_parser.cc",
        "pe_file_parser.h",
        "pe_file_writer.cc",
        "pe_file_writer.h",
        "pe_image_layout_builder.cc",
        "pe_image_layout_builder.h",
        "pe_utils.cc",
        "pe_utils.h",
        "pe_utils_impl.h",
        "pe_relinker.cc",
        "pe_relinker.h",
        "pe_relinker_util.cc",
        "pe_relinker_util.h",
        "pe_structs.h",
        "pe_transform_policy.cc",
        "pe_transform_policy.h",
        "relinker.h",
        "serialization.cc",
        "serialization.h",
    ]
    if (target_cpu == "x86") {
        sources += [
            "dos_stub.asm",
            "dos_stub.cc",
            "dos_stub.h",
        ]
    }
    deps = [
        "//base:base",
        "$src/syzygy/block_graph:block_graph_lib",
        "$src/syzygy/block_graph/orderers:block_graph_orderers_lib",
        "$src/syzygy/block_graph/transforms:block_graph_transforms_lib",
        "$src/syzygy/common:common_lib",
        "$src/syzygy/core:core_lib",
        "$src/syzygy/pdb:pdb_lib",
        "$src/syzygy/version:version_lib",
        "$src/third_party/distorm:distorm",
        "$src/third_party/pcre:pcre_lib",
    ]
    libs = [
        "imagehlp.lib",
    ]
    configs += [ ":default_syzygy_config" ]
}
